@@ -88,15 +88,21 @@ This is treated as an C<unsigned integer> of size 1.
 
 =head3 C<Str>
 
+This is treated as a C<text> value without a size.
+
 =head3 C<NonEmptyStr>
 
 =head3 C<LowerCaseStr>
 
 =head3 C<UpperCaseStr>
 
-These are treated as a C<text> value without a size.
+These are treated the same as L</Str>.  In the future, if
+L<DBIx::Class> supports database-related constraints, this will be
+added to the metadata.
 
 =head3 C<SimpleStr>
+
+This is treated as a C<text> value with a size of 255.
 
 =head3 C<NonEmptySimpleStr>
 
@@ -104,7 +110,9 @@ These are treated as a C<text> value without a size.
 
 =head3 C<UpperCaseSimpleStr>
 
-These is trated as a C<text> value with a size of 255.
+These are treated the same as L</SimpleStr>. In the future, if
+L<DBIx::Class> supports database-related constraints, this will be
+added to the metadata.
 
 =cut
 
