@@ -4,6 +4,10 @@ Revision history for {{ $dist->name }}
   [Documentation]
   - Updated Changes to refer to GitHub issues.
 
+  - Fixed typo in POD.
+
+  - Clarify relationship between some constrained types.
+
 v0.3.1    2018-11-18 11:46:52+00:00 Europe/London
   [Enhancements]
   - InstanceOf['JSON::PP::Boolean', 'Types::Serialiser::Boolean'] can be
